# ludwig-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FIXME.txt  Makefile  README.md  arrow.cpp  arrow.h  caseditto.cpp  ch.cpp  ch.h  charcmd.cpp  charcmd.h  code.cpp  commands.txt  const.cpp  const.h  dfa.cpp  eqsgetrep.cpp  eqsgetrep.h  exec.cpp  exec.h  execimmed.cpp  execimmed.h  filesys.cpp  filesys.h  frame.cpp  frame.h  fyle.cpp  fyle.h  help.cpp  help.h  helpfile.cpp  helpfile.h  line.cpp  ludwig.cpp  ludwighlp.t  ludwighlpbld.c  ludwighlpbld.cpp  (+50 more)
src/: arrow.cpp  arrow.h  caseditto.cpp  caseditto.h  ch.cpp  ch.h  charcmd.cpp  charcmd.h  code.cpp  code.h  const.h  dfa.cpp  dfa.h  eqsgetrep.cpp  eqsgetrep.h  exec.cpp  exec.h  execimmed.cpp  filesys.cpp  filesys.h  frame.cpp  frame.h  fyle.cpp  fyle.h  help.cpp  helpfile.cpp  helpfile.h  line.cpp  line.h  ludwig.cpp  ludwighlpbld.cpp  lwgetopt.cpp  lwgetopt.h  mark.cpp  mark.h  newword.cpp  newword.h  nextbridge.cpp  nextbridge.h  opsys.cpp  (+41 more)
test/: CMakeLists.txt  README.md  test_code.cpp  test_const.cpp  test_fyle.cpp  test_helpfile.cpp  test_main.cpp  test_mark.cpp  test_parray.cpp  test_prange.cpp  test_str_object.cpp
tests/: Makefile  parray.cpp
